NPOTDB xsi:type not on root element is ignored. Bug 375983, p=sspeiche r=doronr+aaronr